--- a/data/amsterdam-umc-db/convert_to_mimic-iii_format.ipynb
+++ b/data/amsterdam-umc-db/convert_to_mimic-iii_format.ipynb
@@ -22,7 +22,8 @@
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
     "\n",
-    "MAX_CHUNKS = 500 # for debugging\n",
+    "# for debugging\n",
+    "MAX_CHUNKS = 100\n",
     "CHUNK_SIZE = 10000"
    ]
   },
@@ -33,12 +34,12 @@
    "source": [
     "### Convenience functions\n",
     "\n",
-    "As the files are in the orders of GBs we read in the files incrementally;"
+    "As the files are in the orders of GBs we read in and process the files incrementally;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "21595f08-f8a0-4d0c-b364-3951ae1951cc",
    "metadata": {},
    "outputs": [],
@@ -92,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# convenience function to compute time in current admission\n",
+    "# convenience function to compute time in current admission in hours\n",
     "def time_within_admission(times, admissionids):\n",
     "    starttimes = pd.Series([start_of_admission[a] for a in admissionids])\n",
     "    return (times.reset_index(drop=True) - starttimes) / (60*60*1000)  # hours"
@@ -720,13 +721,174 @@
    "id": "01ae2dd0-3fbd-49d6-a73f-56d71707bad7",
    "metadata": {},
    "source": [
-    "#### SIRS and SOFA"
+    "#### Systemic inflammatory response syndrome (SIRS) score\n",
+    "Sources:\n",
+    "- Temperature: [temperature.sql](https://github.com/AmsterdamUMC/AmsterdamUMCdb/blob/b6f295fbfbd9a1f8f9cfa71dab58c670120543d8/amsterdamumcdb/sql/common/temperature.sql)\n",
+    "- Heart rate: [heart_rate.sql](https://github.com/AmsterdamUMC/AmsterdamUMCdb/blob/b6f295fbfbd9a1f8f9cfa71dab58c670120543d8/amsterdamumcdb/sql/common/heart_rate.sql)\n",
+    "- Respiratory rate: [resp_rate.sql](https://github.com/AmsterdamUMC/AmsterdamUMCdb/blob/b6f295fbfbd9a1f8f9cfa71dab58c670120543d8/amsterdamumcdb/sql/common/resp_rate.sql)\n",
+    "- WBC/Leukocytes: [wbc.sql](https://github.com/AmsterdamUMC/AmsterdamUMCdb/blob/b6f295fbfbd9a1f8f9cfa71dab58c670120543d8/amsterdamumcdb/sql/common/wbc.sql)\n",
+    "- SIRS definition: https://www.mdcalc.com/calc/1096/sirs-sepsis-septic-shock-criteria"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "aa9d558f-b1ec-49d6-bad6-8cbabdd68d98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TEMPERATURE = [\n",
+    "    8658,  # --Temp Bloed\n",
+    "    8659,  # --Temperatuur Perifeer 2\n",
+    "    8662,  # --Temperatuur Perifeer 1\n",
+    "    13058, # --Temp Rectaal\n",
+    "    13059, # --Temp Lies\n",
+    "    13060, # --Temp Axillair\n",
+    "    13061, # --Temp Oraal\n",
+    "    13062, # --Temp Oor\n",
+    "    13063, # --Temp Huid\n",
+    "    13952, # --Temp Blaas\n",
+    "    16110  # --Temp Oesophagus\n",
+    "]\n",
+    "\n",
+    "PCO2 = [\n",
+    "    6846,  # --PCO2\n",
+    "    9990,  # --pCO2 (bloed)\n",
+    "    21213  # --PCO2 (bloed) - kPa\n",
+    "]\n",
+    "\n",
+    "HEARTRATE = [\n",
+    "    6640   # --Hartfrequentie\n",
+    "]\n",
+    "\n",
+    "RESP_RATE = [\n",
+    "    8873,   # --Ademfrequentie Evita: measurement by Evita ventilator, most accurate\n",
+    "    12266,  # --Ademfreq.: measurement by Servo-i/Servo-U ventilator, most accurate\n",
+    "    8874    # --Ademfrequentie Monitor: measurement by patient monitor using ECG-impedance, less accurate  \n",
+    "]\n",
+    "\n",
+    "WBC = [\n",
+    "    6779,  # --Leucocyten 10^9/l\n",
+    "    9965   # --Leuco's (bloed) 10^9/l\n",
+    "]\n",
+    "\n",
+    "BANDS = [\n",
+    "    11586  # -- Staaf % (bloed)\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67746d08-3b7e-40f5-a326-0cb13426d0ab",
+   "metadata": {},
+   "source": [
+    "##### SIRS on admission"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "03bb40fb-27b5-4e52-89e4-599dd76ef47b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Store for each admission its SIRS score in this dict\n",
+    "sirs_on_admission = dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4e4513f4-d2ba-4293-b51c-f8606e20b17c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "101it [00:08, 11.66it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "for i, chunk in tqdm(read_csv(r\"D:/AmsterdamUMCdb-v1.0.2/numericitems.csv\", usecols=['admissionid', 'itemid', 'value', 'measuredat', 'unitid'])):\n",
+    "    # which observations are within 24h of start admission?\n",
+    "    within_24h = time_within_admission(chunk.measuredat, chunk.admissionid) < 24\n",
+    "    \n",
+    "    # Respiratory rate (unit = breaths/min)\n",
+    "    resp_rate = chunk[chunk.itemid.isin(RESP_RATE) & (chunk.unitid == 15) & within_24h]\n",
+    "    resp_rate = resp_rate.groupby('admissionid', sort=False).value.first().to_dict()\n",
+    "    \n",
+    "    # PaCO2 (mmHg)\n",
+    "    paco2 = chunk[chunk.itemid.isin(PCO2) & within_24h].copy()\n",
+    "    paco2.loc[paco2.unitid == 152, 'value'] *= paco2.value * 7.50061683  # conversion rate kPa to mmHg\n",
+    "    paco2 = paco2.groupby('admissionid', sort=False).value.first().to_dict()\n",
+    "    \n",
+    "    # Temperature (degrees C)\n",
+    "    temp = chunk[chunk.itemid.isin(TEMPERATURE) & (chunk.unitid == 59) & within_24h]\n",
+    "    temp = temp.groupby('admissionid', sort=False).value.first().to_dict()\n",
+    "    \n",
+    "    # Heart rate (beats/min)\n",
+    "    heart_rate = chunk[chunk.itemid.isin(HEARTRATE) & (chunk.unitid == 15) & within_24h]\n",
+    "    heart_rate = heart_rate.groupby('admissionid', sort=False).value.first().to_dict()\n",
+    "    \n",
+    "    # Leukocytes (10^9/l)\n",
+    "    wbc = chunk[chunk.itemid.isin(WBC) & (chunk.unitid == 101) & within_24h]\n",
+    "    wbc = wbc.groupby('admissionid', sort=False).value.first().to_dict()\n",
+    "    \n",
+    "    # Bands (bloed %)\n",
+    "    bands = chunk[chunk.itemid.isin(BANDS) & within_24h]\n",
+    "    bands = bands.groupby('admissionid', sort=False).value.first().to_dict()\n",
+    "        \n",
+    "    # SIRS score\n",
+    "    admissionids = temp.keys() & heart_rate.keys() & (resp_rate.keys() | paco2.keys()) & (wbc.keys() | bands.keys())\n",
+    "    for admissionid in admissionids:\n",
+    "        # For details, see: http://www.mdcalc.com/calc/1096/sirs-sepsis-septic-shock-criteria\n",
+    "        score = int(temp[admissionid] < 36 or temp[admissionid] > 38)\n",
+    "        score += int(heart_rate[admissionid] > 90)\n",
+    "        score += int(resp_rate[admissionid] > 20) if admissionid in resp_rate else int(paco2[admissionid] < 32)\n",
+    "        score += int(wbc[admissionid] > 12 or wbc[admissionid] < 4) if admissionid in wbc else int(bands[admissionid] > 10)\n",
+    "        \n",
+    "        sirs_on_admission[admissionid] = score\n",
+    "        \n",
+    "    if i > MAX_CHUNKS:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d45efbdf-af3e-4ce1-84cf-90f76b024803",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sirs_on_admission[11]  # SIRS of admission 11 in first 24h"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98722226-7b03-4613-a9bf-7b6d77676d4c",
+   "metadata": {},
+   "source": [
+    "#### Sequential Organ Failure Assessment (SOFA) score"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa9d558f-b1ec-49d6-bad6-8cbabdd68d98",
+   "id": "cd8ac81d-2554-4520-989b-ecd09025cc09",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -743,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "b84855f5-cd0d-4aac-b14f-d866c4391416",
    "metadata": {},
    "outputs": [],
@@ -762,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "f0ae1a8f-058c-4bc2-ac58-e7b20b0b76ec",
    "metadata": {},
    "outputs": [],
@@ -793,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "id": "4aa47554-abb6-4e05-abdc-7c4a0b4d6cf8",
    "metadata": {},
    "outputs": [
@@ -801,14 +963,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "501it [00:37, 13.19it/s]"
+      "101it [00:07, 12.74it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of admissions with ventilation: 2544\n"
+      "Number of admissions with ventilation: 526\n"
      ]
     },
     {
@@ -844,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "id": "b1ff3c58-c264-4942-90d2-41b95d54b4f5",
    "metadata": {},
    "outputs": [],
@@ -881,51 +1043,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "80fdef33-024a-4922-9e2a-b185fac5531f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class DemoMapping:\n",
-    "    \"\"\"\n",
-    "    Convenience class to convert age, weigth and height groups\n",
-    "    to their center value (taking care of N/A entries per gender)\n",
-    "    \"\"\"\n",
-    "    def __init__(self, demo_map, male_avg=np.NaN, female_avg=np.NaN):\n",
-    "        self._demo_map = demo_map\n",
-    "        self._male_avg = male_avg\n",
-    "        self._female_avg = female_avg\n",
-    "        \n",
-    "    def __call__(self, group, gender):\n",
-    "        # replace groups by their centroids\n",
-    "        out = group.replace(self._demo_map)\n",
-    "                \n",
-    "        # if unknown use Dutch average (accounting for gender)\n",
-    "        unknown = out < 0\n",
-    "        male = gender == 'Man'\n",
-    "        female = gender == 'Vrouw'\n",
-    "        out[unknown & male] = self._male_avg\n",
-    "        out[unknown & female] = self._female_avg\n",
-    "        return out\n",
-    "\n",
-    "    \n",
-    "age_mapper = DemoMapping(AGE_GROUPS)\n",
-    "height_mapper = DemoMapping(HEIGHT_GROUPS, male_avg=184, female_avg=170)   # Average height of men and women in NL\n",
-    "weight_mapper = DemoMapping(WEIGHT_GROUPS, male_avg=87.9, female_avg=73.2) # Average weight of men and women in NL"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "ec96dbe2-7304-430a-936d-9fe48c05dd68",
    "metadata": {},
    "source": [
-    "Using the above *mapper* functions we can now map from grouped demographics (`agegroup`, `heightgroup`, `weightgroup`) to a real value and when unknown use per-gender guesses of weight and height (better than a naive average over the population)"
+    "Using the above *mapper* functions we can now map from grouped demographics (`agegroup`, `heightgroup`, `weightgroup`) to a real value and when unknown use per-gender guesses of weight and height (better than a naive average over the population)\n",
+    "\n",
+    "### Demographics DataFrame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 42,
    "id": "601a8a61-4c08-46d9-872b-879cd3e6ef54",
    "metadata": {},
    "outputs": [],
@@ -937,10 +1066,11 @@
     "    demo_chunk = pd.DataFrame({\n",
     "        'icustay_id': chunk.admissionid,\n",
     "        'is_male': chunk.gender == 'Man',\n",
-    "        'age': age_mapper(chunk.agegroup, chunk.gender),\n",
-    "        'height': height_mapper(chunk.heightgroup, chunk.gender),\n",
-    "        'weight': weight_mapper(chunk.weightgroup, chunk.gender),\n",
-    "        'vent': chunk.admissionid.isin(admissions_with_vent)\n",
+    "        'age': chunk.agegroup.transform(lambda x: AGE_GROUPS[x] if x in AGE_GROUPS else np.NaN),\n",
+    "        'height': chunk.heightgroup.transform(lambda x: HEIGHT_GROUPS[x] if x in HEIGHT_GROUPS else np.NaN),\n",
+    "        'weight': chunk.weightgroup.transform(lambda x: WEIGHT_GROUPS[x] if x in WEIGHT_GROUPS else np.NaN),\n",
+    "        'vent': chunk.admissionid.isin(admissions_with_vent),\n",
+    "        'sirs': chunk.admissionid.transform(lambda x: sirs_on_admission[x] if x in sirs_on_admission else np.NaN)  # NaN if couldn't be estimated\n",
     "    })\n",
     "    demo_df.append(demo_chunk)\n",
     "    \n",
@@ -949,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 43,
    "id": "a5a2ebdc-844a-4c30-8274-1c50fb831ee5",
    "metadata": {},
    "outputs": [
@@ -980,6 +1110,7 @@
        "      <th>height</th>\n",
        "      <th>weight</th>\n",
        "      <th>vent</th>\n",
+       "      <th>sirs</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -991,6 +1122,7 @@
        "      <td>165.0</td>\n",
        "      <td>65.0</td>\n",
        "      <td>True</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1000,6 +1132,7 @@
        "      <td>175.0</td>\n",
        "      <td>75.0</td>\n",
        "      <td>True</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1009,6 +1142,7 @@
        "      <td>185.0</td>\n",
        "      <td>95.0</td>\n",
        "      <td>True</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1018,6 +1152,7 @@
        "      <td>185.0</td>\n",
        "      <td>95.0</td>\n",
        "      <td>True</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1027,9 +1162,11 @@
        "      <td>175.0</td>\n",
        "      <td>75.0</td>\n",
        "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -1045,6 +1182,7 @@
        "      <td>185.0</td>\n",
        "      <td>75.0</td>\n",
        "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23102</th>\n",
@@ -1054,6 +1192,7 @@
        "      <td>165.0</td>\n",
        "      <td>65.0</td>\n",
        "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23103</th>\n",
@@ -1063,6 +1202,7 @@
        "      <td>175.0</td>\n",
        "      <td>55.0</td>\n",
        "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23104</th>\n",
@@ -1072,6 +1212,7 @@
        "      <td>165.0</td>\n",
        "      <td>65.0</td>\n",
        "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23105</th>\n",
@@ -1081,30 +1222,31 @@
        "      <td>185.0</td>\n",
        "      <td>65.0</td>\n",
        "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>23106 rows × 6 columns</p>\n",
+       "<p>23106 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       icustay_id  is_male  age  height  weight   vent\n",
-       "0               0    False   85   165.0    65.0   True\n",
-       "1               1     True   65   175.0    75.0   True\n",
-       "2               2     True   65   185.0    95.0   True\n",
-       "3               3     True   55   185.0    95.0   True\n",
-       "4               4     True   75   175.0    75.0   True\n",
-       "...           ...      ...  ...     ...     ...    ...\n",
-       "23101       23548    False   45   185.0    75.0  False\n",
-       "23102       23549    False   45   165.0    65.0  False\n",
-       "23103       23550     True   85   175.0    55.0  False\n",
-       "23104       23551    False   45   165.0    65.0  False\n",
-       "23105       23552     True   65   185.0    65.0  False\n",
+       "       icustay_id  is_male  age  height  weight   vent  sirs\n",
+       "0               0    False   85   165.0    65.0   True   1.0\n",
+       "1               1     True   65   175.0    75.0   True   1.0\n",
+       "2               2     True   65   185.0    95.0   True   0.0\n",
+       "3               3     True   55   185.0    95.0   True   1.0\n",
+       "4               4     True   75   175.0    75.0   True   NaN\n",
+       "...           ...      ...  ...     ...     ...    ...   ...\n",
+       "23101       23548    False   45   185.0    75.0  False   NaN\n",
+       "23102       23549    False   45   165.0    65.0  False   NaN\n",
+       "23103       23550     True   85   175.0    55.0  False   NaN\n",
+       "23104       23551    False   45   165.0    65.0  False   NaN\n",
+       "23105       23552     True   65   185.0    65.0  False   NaN\n",
        "\n",
-       "[23106 rows x 6 columns]"
+       "[23106 rows x 7 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
