--- a/data/amsterdam-umc-db/convert_to_mimic-iii_format.ipynb
+++ b/data/amsterdam-umc-db/convert_to_mimic-iii_format.ipynb
@@ -780,8 +780,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9c17a745-d2a8-4578-8fab-0f526f794609",
+   "metadata": {},
+   "source": [
+    "For each chunk of the `numericitems.csv` with a few admissions, we will extract the above parameters (incl. temperature, heart rate, PCO2, leukocyte count, etc.) and infer their earliest values within the admission (with a cap of at most 24 hours after start of admission). We then compute the SIRS score from those parameters."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "id": "53937fdf-2568-4314-baea-616b3fc45de6",
    "metadata": {},
    "outputs": [],
@@ -806,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "4e4513f4-d2ba-4293-b51c-f8606e20b17c",
    "metadata": {},
    "outputs": [
@@ -814,7 +822,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "101it [00:08, 11.40it/s]\n"
+      "101it [00:08, 11.68it/s]\n"
      ]
     }
    ],
@@ -860,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "d45efbdf-af3e-4ce1-84cf-90f76b024803",
    "metadata": {},
    "outputs": [
@@ -870,7 +878,7 @@
        "2"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -891,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "b84855f5-cd0d-4aac-b14f-d866c4391416",
    "metadata": {},
    "outputs": [],
@@ -910,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "f0ae1a8f-058c-4bc2-ac58-e7b20b0b76ec",
    "metadata": {},
    "outputs": [],
@@ -941,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "id": "4aa47554-abb6-4e05-abdc-7c4a0b4d6cf8",
    "metadata": {},
    "outputs": [
@@ -949,7 +957,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "101it [00:07, 13.02it/s]"
+      "101it [00:07, 12.88it/s]"
      ]
     },
     {
@@ -989,6 +997,99 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ccc28364-3ab6-48c1-8258-a198e835c51b",
+   "metadata": {},
+   "source": [
+    "#### Glasgow Coma Scale\n",
+    "Sources: \n",
+    "- Glasgow Coma Scale: [gcs.sql](https://github.com/AmsterdamUMC/AmsterdamUMCdb/blob/b6f295fbfbd9a1f8f9cfa71dab58c670120543d8/amsterdamumcdb/sql/common/gcs.sql)\n",
+    "- GCS definition: https://www.mdcalc.com/calc/64/glasgow-coma-scale-score-gcs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b7aab003-6b30-4c35-9606-58c4e73d427e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## credits Patrick Thoral\n",
+    "\n",
+    "def gcs_eyes_score(df):\n",
+    "    df = df.copy()\n",
+    "    df.loc[df.itemid == 6732, 'eyes_score'] = 5 - df.valueid   # --Actief openen van de ogen\n",
+    "    df.loc[df.itemid == 13077, 'eyes_score'] = df.valueid      # --A_Eye\n",
+    "    df.loc[df.itemid == 14470, 'eyes_score'] = df.valueid - 4  # --RA_Eye\n",
+    "    df.loc[df.itemid == 16628, 'eyes_score'] = df.valueid - 4  # --MCA_Eye\n",
+    "    df.loc[df.itemid == 19635, 'eyes_score'] = df.valueid - 4  # --E_EMV_NICE_24uur\n",
+    "    df.loc[df.itemid == 19638, 'eyes_score'] = df.valueid - 8  # --E_EMV_NICE_Opname\n",
+    "    return df\n",
+    "    \n",
+    "def gcs_motor_score(df):\n",
+    "    df = df.copy()\n",
+    "    df.loc[df.itemid == 6734, 'motor_score'] = 7 - df.valueid   # --Beste motore reactie van de armen\n",
+    "    df.loc[df.itemid == 13072, 'motor_score'] = df.valueid      # --A_Motoriek\n",
+    "    df.loc[df.itemid == 14476, 'motor_score'] = df.valueid - 6  # --RA_Motoriek\n",
+    "    df.loc[df.itemid == 16634, 'motor_score'] = df.valueid - 6  # --MCA_Motoriek\n",
+    "    df.loc[df.itemid == 19636, 'motor_score'] = df.valueid - 6  # --M_EMV_NICE_24uur\n",
+    "    df.loc[df.itemid == 19639, 'motor_score'] = df.valueid - 12 # --M_EMV_NICE_Opname\n",
+    "    return df\n",
+    "\n",
+    "def gcs_verbal_score(df):\n",
+    "    df = df.copy()\n",
+    "    df.loc[df.itemid == 6735, 'verbal_score'] = 6 - df.valueid   # --Beste verbale reactie\n",
+    "    df.loc[df.itemid == 13066, 'verbal_score'] = df.valueid      # --A_Verbal\n",
+    "    df.loc[df.itemid == 14482, 'verbal_score'] = df.valueid - 5  # --RA_Verbal\n",
+    "    df.loc[df.itemid == 16640, 'verbal_score'] = df.valueid - 5  # --MCA_Verbal\n",
+    "    df.loc[df.itemid == 19637, 'verbal_score'] = df.valueid - 9  # --V_EMV_NICE_24uur\n",
+    "    df.loc[df.itemid == 19640, 'verbal_score'] = df.valueid - 15 # --M_EMV_NICE_Opname\n",
+    "    \n",
+    "    # cap verbal score at 1\n",
+    "    df.loc[df['verbal_score'] < 1, 'verbal_score'] = 1\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "33c4cd86-b7e6-4e3d-a4e6-20235ce19188",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "101it [00:09, 11.02it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "gcs_on_admission = dict()\n",
+    "\n",
+    "for i, chunk in tqdm(read_csv(r\"D:/AmsterdamUMCdb-v1.0.2/listitems.csv\", usecols=['admissionid', 'itemid', 'valueid', 'value', 'measuredat', 'registeredby'])): \n",
+    "    # which observations are within 24h of start admission?\n",
+    "    times = time_within_admission(chunk.measuredat, chunk.admissionid)\n",
+    "    within_24h = (times > -0.5) & (times < 24) # Allow 30 minute margin before admission\n",
+    "    \n",
+    "    # component scores: eye / motor / verbal\n",
+    "    chunk = gcs_eyes_score(chunk)\n",
+    "    chunk = gcs_motor_score(chunk)\n",
+    "    chunk = gcs_verbal_score(chunk)\n",
+    "        \n",
+    "    # GCS = eye + motor + verbal score\n",
+    "    gcs = chunk.groupby('admissionid').first()[['eyes_score', 'motor_score', 'verbal_score']].sum(axis=1, min_count=1)\n",
+    "        \n",
+    "    # drop admissions where score could not be computed\n",
+    "    gcs = gcs[gcs.notna()].to_dict()\n",
+    "    \n",
+    "    gcs_on_admission.update(gcs)\n",
+    "    \n",
+    "    if i > MAX_CHUNKS:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a8dc07d8-5254-4312-baae-d28be3459f11",
    "metadata": {},
    "source": [
@@ -1006,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "id": "ba39c6f3-4ede-41dc-84c5-2f6165d4c50c",
    "metadata": {},
    "outputs": [],
@@ -1115,8 +1216,8 @@
     "    platelets = chunk[chunk.itemid.isin(PLATELETS) & within_24h]\n",
     "    platelets = platelets.groupby('admissionid', sort=False).value.first().to_dict()\n",
     "    \n",
-    "    # GCS: TODO\n",
-    "    gcs = None\n",
+    "    # GCS (we computed this before)\n",
+    "    gcs = chunk.admissionid.isin(gcs_on_admission).to_dict()\n",
     "    \n",
     "    # Bilirubin\n",
     "    bilirubin = chunk[chunk.itemid.isin(BILIRUBIN) & within_24h]\n",
