--- a/data/amsterdam-umc-db/convert_to_mimic-iii_format.ipynb
+++ b/data/amsterdam-umc-db/convert_to_mimic-iii_format.ipynb
@@ -1066,7 +1066,7 @@
    "source": [
     "gcs_on_admission = dict()\n",
     "\n",
-    "for i, chunk in tqdm(read_csv(r\"D:/AmsterdamUMCdb-v1.0.2/listitems.csv\", usecols=['admissionid', 'itemid', 'valueid', 'value', 'measuredat', 'registeredby'])): \n",
+    "for i, chunk in tqdm(read_csv(r\"D:/AmsterdamUMCdb-v1.0.2/listitems.csv\", usecols=['admissionid', 'itemid', 'valueid', 'value', 'measuredat'])): \n",
     "    # which observations are within 24h of start admission?\n",
     "    times = time_within_admission(chunk.measuredat, chunk.admissionid)\n",
     "    within_24h = (times > -0.5) & (times < 24) # Allow 30 minute margin before admission\n",
@@ -1098,7 +1098,7 @@
     "Sources:\n",
     "\n",
     "- PaO2/FiO2: [pO2_pCO2_FiO2.sql](https://github.com/AmsterdamUMC/AmsterdamUMCdb/blob/b6f295fbfbd9a1f8f9cfa71dab58c670120543d8/amsterdamumcdb/sql/common/pO2_pCO2_FiO2.sql)\n",
-    "- Mechanical ventilation: [mechanical_ventilation.sql](https://github.com/AmsterdamUMC/AmsterdamUMCdb/blob/b6f295fbfbd9a1f8f9cfa71dab58c670120543d8/amsterdamumcdb/sql/lifesupport/mechanical_ventilation.sql)\n",
+    "- Ventilators: [mechanical_ventilation.sql](https://github.com/AmsterdamUMC/AmsterdamUMCdb/blob/b6f295fbfbd9a1f8f9cfa71dab58c670120543d8/amsterdamumcdb/sql/lifesupport/mechanical_ventilation.sql)\n",
     "- Platelets: [platelets.sql](https://github.com/AmsterdamUMC/AmsterdamUMCdb/blob/b6f295fbfbd9a1f8f9cfa71dab58c670120543d8/amsterdamumcdb/sql/common/platelets.sql)\n",
     "- Glasgow Coma Scale: [gcs.sql](https://github.com/AmsterdamUMC/AmsterdamUMCdb/blob/b6f295fbfbd9a1f8f9cfa71dab58c670120543d8/amsterdamumcdb/sql/common/gcs.sql)\n",
     "- Bilirubin: [bilirubin.sql](https://github.com/AmsterdamUMC/AmsterdamUMCdb/blob/b6f295fbfbd9a1f8f9cfa71dab58c670120543d8/amsterdamumcdb/sql/common/bilirubin.sql)\n",
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "id": "2cb154e0-9b3f-47a9-886d-b435f8b98132",
    "metadata": {},
    "outputs": [],
@@ -1180,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "id": "7de7acb2-672f-4fa2-8dc4-af0471f4b1fe",
    "metadata": {},
    "outputs": [
@@ -1188,14 +1188,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "101it [00:09, 10.89it/s]\n"
+      "101it [00:10,  9.74it/s]\n"
      ]
     }
    ],
    "source": [
     "sofa_on_admission = dict()\n",
     "\n",
-    "for i, chunk in tqdm(read_csv(r\"D:/AmsterdamUMCdb-v1.0.2/numericitems.csv\", usecols=['admissionid', 'itemid', 'value', 'measuredat', 'unitid', 'unit'])):\n",
+    "for i, chunk in tqdm(read_csv(r\"D:/AmsterdamUMCdb-v1.0.2/numericitems.csv\", usecols=['admissionid', 'itemid', 'value', 'measuredat', 'unitid'])):\n",
     "    # which observations are within 24h of start admission?\n",
     "    times = time_within_admission(chunk.measuredat, chunk.admissionid)\n",
     "    within_24h = (times > -0.5) & (times < 24) # Allow 30 minute margin before admission\n",
@@ -1247,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "id": "b1ff3c58-c264-4942-90d2-41b95d54b4f5",
    "metadata": {},
    "outputs": [],
@@ -1295,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "id": "601a8a61-4c08-46d9-872b-879cd3e6ef54",
    "metadata": {},
    "outputs": [],
@@ -1321,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "id": "a5a2ebdc-844a-4c30-8274-1c50fb831ee5",
    "metadata": {},
    "outputs": [
@@ -1500,7 +1500,7 @@
        "[23106 rows x 8 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1510,12 +1510,160 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8c5b4b9a-f495-4bd9-a02f-a3e0854bf091",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## Vitals\n",
+    "\n",
+    "Sources:\n",
+    "- Vital parameters: [amsterdamumcdb/sql/common](https://github.com/AmsterdamUMC/AmsterdamUMCdb/tree/master/amsterdamumcdb/sql/common)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d3d7d00c-df91-452d-abf6-0465550e12aa",
+   "execution_count": 22,
+   "id": "4bc7d8da-3f55-4f97-9b23-c3201fbbe7bc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "VITALS = {\n",
+    "    'HeartRate': [6640],                                     # 'Hartfrequentie'\n",
+    "    'SysBP':     [6641, 6678, 8841],                         # 'ABP systolisch', 'Niet invasieve bloeddruk systolisch', 'ABP systolisch II', \n",
+    "    'DiasBP':    [6643, 6680, 8842],                         # 'ABP diastolisch', 'Niet invasieve bloeddruk diastolisch', 'ABP diastolisch II'\n",
+    "    'MeanBP':    [6642, 6679, 8843],                         # 'ABP gemiddeld', 'Niet invasieve bloeddruk gemiddeld', 'ABP gemiddeld II'\n",
+    "    'Glucose':   [6833],                                     # 'Glucose Bloed'\n",
+    "    'SpO2':      [12311],                                    # 'O2-Saturatie (bloed)'\n",
+    "    'TempC':     [8658, 8659, 8662, 13058, 13059,            # 'Temp Bloed', 'Temperatuur Perifeer 2', 'Temperatuur Perifeer 1', 'Temp Rectaal', 'Temp Lies',\n",
+    "                 13060, 13061, 13062, 13063, 13952, 16110],  # 'Temp Axillair', 'Temp Oraal', 'Temp Oor', 'Temp Huid', 'Temp Blaas', 'Temp Oesophagus' \n",
+    "    'RespRate':  [8874, 8873, 9654, 7726, 12266]             # 'Ademfrequentie Monitor', 'Ademfrequentie Evita', 'Ademfreq.'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "87f517ca-698e-4b89-8302-8e8a7e5f0bb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "101it [00:07, 13.74it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>icustay_id</th>\n",
+       "      <th>charttime</th>\n",
+       "      <th>vital_id</th>\n",
+       "      <th>valuenum</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>HeartRate</td>\n",
+       "      <td>83.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>HeartRate</td>\n",
+       "      <td>84.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>HeartRate</td>\n",
+       "      <td>82.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.2</td>\n",
+       "      <td>HeartRate</td>\n",
+       "      <td>78.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9.2</td>\n",
+       "      <td>HeartRate</td>\n",
+       "      <td>73.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   icustay_id  charttime   vital_id  valuenum\n",
+       "0         0.0        5.7  HeartRate      83.0\n",
+       "1         0.0        6.2  HeartRate      84.0\n",
+       "2         0.0        7.2  HeartRate      82.0\n",
+       "3         0.0        8.2  HeartRate      78.0\n",
+       "4         0.0        9.2  HeartRate      73.0"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vitals_df = []\n",
+    "\n",
+    "for i, chunk in tqdm(read_csv(r\"D:/AmsterdamUMCdb-v1.0.2/numericitems.csv\", usecols=['admissionid', 'itemid', 'value', 'measuredat'])):\n",
+    "    \n",
+    "    for vital, vital_ids in VITALS.items():\n",
+    "        # Mask entries of vital\n",
+    "        is_vital = chunk.itemid.isin(vital_ids)\n",
+    "        \n",
+    "        if is_vital.any():\n",
+    "            \n",
+    "            # Store measurements of vital in new DataFrame\n",
+    "            vital_df = pd.DataFrame({\n",
+    "                'icustay_id': chunk.admissionid[is_vital],\n",
+    "                'charttime': time_within_admission(chunk.measuredat[is_vital], chunk.admissionid[is_vital]),\n",
+    "                'vital_id': vital,\n",
+    "                'valuenum': chunk.value[is_vital],\n",
+    "            })\n",
+    "            \n",
+    "            vitals_df.append(vital_df)\n",
+    "        \n",
+    "    if i > MAX_CHUNKS:\n",
+    "        break\n",
+    "        \n",
+    "# Merge vital DataFrames\n",
+    "vitals_df = pd.concat(vitals_df, axis=0).reset_index(drop=True)\n",
+    "vitals_df.head()"
+   ]
   }
  ],
  "metadata": {
