Added lab results and vitals

--- a/data/amsterdam-umc-db/convert_to_mimic-iii_format.ipynb
+++ b/data/amsterdam-umc-db/convert_to_mimic-iii_format.ipynb
@@ -1664,6 +1664,181 @@
     "vitals_df = pd.concat(vitals_df, axis=0).reset_index(drop=True)\n",
     "vitals_df.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4acc7850-c0cc-4c08-9f28-9b9446dd22b1",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## Lab Results\n",
+    "Sources: lots of hard work, blood, sweat and tears"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "6de4d5f5-c06e-49da-b923-67da7c0de7b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LABRESULTS = {\n",
+    "    'Calcium':     [9933],                           # 'Calcium', 'Calcium totaal (bloed)'\n",
+    "    'IonCalcium':  [],\n",
+    "    'ASAT':        [11990],                          # 'ASAT (bloed)'\n",
+    "    'PTT':         [17982],                          # 'APTT (bloed)'\n",
+    "    'Potassium':   [9927],                           # 'Kalium (bloed)'\n",
+    "    'PT':          [],\n",
+    "    'Platelet':    [6797, 9964, 10409, 14252, 7369], # 'Thrombocyten', \"Thrombo's (bloed)\", \"Thrombo's citr. bloed (bloed)\", 'Thrombo CD61 (bloed)'\n",
+    "    'AnionGap':    [9559],                           # 'Anion-Gap (bloed)'\n",
+    "    'PaO2':        [7433, 9996, 21214],              # 'PaO2', 'PaO2 (bloed)', 'PaO2 (bloed) - kPa'\n",
+    "    'ALAT':        [6800, 11978],                    # 'ALAT', 'ALAT (bloed)'\n",
+    "    'WBC':         [11678, 18553, 18554,             # 'Tot.WBC*10^8 (overig)', 'Tot. WBC*10^8 (HPC-A Allogeen)', 'Tot. WBC*10^8 (HPC-A Autoloog)'\n",
+    "                    18557, 6779, 9965],              # 'Tot. WBC*10^8 (Tcellen concentraat)', 'Leucocyten 10^9/l', \"Leuco's (bloed) 10^9/l\"\n",
+    "    'Bilirubin':   [9945, 6813],                     # 'Bilirubine (bloed)', 'Bili Totaal'\n",
+    "    'Sodium':      [12233, 9555, 9924, 10284],       # 'Natrium (overig)', 'Natrium Astrup', 'Natrium (bloed)', 'Na (onv.ISE) (bloed)'\n",
+    "    'Chloride':    [],\n",
+    "    'Magnesium':   [9952],                           # 'Magnesium (bloed)'\n",
+    "    'Lactate':     [10053],                          # 'Lactaat (bloed)'\n",
+    "    'PaCO2':       [6846, 9990, 21213],              # 'PCO2', 'PCO2 (bloed)', 'PCO2 (bloed) - kPa'\n",
+    "    'Glucose':     [6833, 9947],                     # 'Glucose Bloed', 'Glucose (bloed)'\n",
+    "    'Creatinine':  [9941, 14216],                    # 'Kreatinine (bloed)', 'KREAT enzym. (bloed)'\n",
+    "    'Bicarbinate': [],\n",
+    "    'BUN':         [],\n",
+    "    'pH':          [6848],                           # 'pH (bloed)'\n",
+    "    'Albumin':     [9975],                           # 'Albumine (imm.) (bloed)'\n",
+    "    'Bands':       [],\n",
+    "    'Hemoglobin':  [9960],                           # 'Hb (bloed)'\n",
+    "    'BaseExcess':  []\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "7d623876-0bae-4075-90a2-f107aa6cc5d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "101it [00:09, 10.89it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>icustay_id</th>\n",
+       "      <th>charttime</th>\n",
+       "      <th>lab_id</th>\n",
+       "      <th>valuenum</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.100000</td>\n",
+       "      <td>Calcium</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12.683333</td>\n",
+       "      <td>Calcium</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.416667</td>\n",
+       "      <td>Calcium</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.916667</td>\n",
+       "      <td>Calcium</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.350000</td>\n",
+       "      <td>Calcium</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   icustay_id  charttime   lab_id  valuenum\n",
+       "0         NaN   6.100000  Calcium       NaN\n",
+       "1         NaN  12.683333  Calcium       NaN\n",
+       "2         NaN   0.416667  Calcium       NaN\n",
+       "3         NaN   2.916667  Calcium       NaN\n",
+       "4         NaN   0.350000  Calcium       NaN"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labs_df = []\n",
+    "\n",
+    "for i, chunk in tqdm(read_csv(r\"D:/AmsterdamUMCdb-v1.0.2/numericitems.csv\", usecols=['admissionid', 'itemid', 'value', 'measuredat', 'unitid'])):\n",
+    "    \n",
+    "    for lab, lab_ids in LABRESULTS.items():\n",
+    "        # Mask entries of one lab test\n",
+    "        is_lab = chunk.itemid.isin(lab_ids)\n",
+    "        \n",
+    "        if is_lab.any():\n",
+    "            \n",
+    "            # Rate conversions\n",
+    "            chunk.loc[chunk.unitid == 152, 'value'] *= chunk.value * 7.50061683  # conversion rate kPa to mmHg\n",
+    "            \n",
+    "            # Store lab measurements in new DataFrame\n",
+    "            lab_df = pd.DataFrame({\n",
+    "                'icustay_id': chunk.admissionid[is_lab],\n",
+    "                'charttime': time_within_admission(chunk.measuredat[is_lab], chunk.admissionid[is_lab]),\n",
+    "                'lab_id': lab,\n",
+    "                'valuenum': chunk.value[is_lab],\n",
+    "            })\n",
+    "            \n",
+    "            labs_df.append(lab_df)\n",
+    "        \n",
+    "    if i > MAX_CHUNKS:\n",
+    "        break\n",
+    "        \n",
+    "# Merge vital DataFrames\n",
+    "labs_df = pd.concat(labs_df, axis=0).reset_index(drop=True)\n",
+    "labs_df.head()"
+   ]
   }
  ],
  "metadata": {
