--- a/data/amsterdam-umc-db/convert_to_mimic-iii_format.ipynb
+++ b/data/amsterdam-umc-db/convert_to_mimic-iii_format.ipynb
@@ -1544,7 +1544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 45,
    "id": "87f517ca-698e-4b89-8302-8e8a7e5f0bb1",
    "metadata": {},
    "outputs": [
@@ -1552,7 +1552,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "101it [00:07, 13.74it/s]\n"
+      "101it [00:07, 13.59it/s]\n"
      ]
     },
     {
@@ -1585,35 +1585,35 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>5.7</td>\n",
        "      <td>HeartRate</td>\n",
        "      <td>83.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>6.2</td>\n",
        "      <td>HeartRate</td>\n",
        "      <td>84.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>7.2</td>\n",
        "      <td>HeartRate</td>\n",
        "      <td>82.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>8.2</td>\n",
        "      <td>HeartRate</td>\n",
        "      <td>78.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>9.2</td>\n",
        "      <td>HeartRate</td>\n",
        "      <td>73.0</td>\n",
@@ -1624,14 +1624,14 @@
       ],
       "text/plain": [
        "   icustay_id  charttime   vital_id  valuenum\n",
-       "0         0.0        5.7  HeartRate      83.0\n",
-       "1         0.0        6.2  HeartRate      84.0\n",
-       "2         0.0        7.2  HeartRate      82.0\n",
-       "3         0.0        8.2  HeartRate      78.0\n",
-       "4         0.0        9.2  HeartRate      73.0"
+       "0           0        5.7  HeartRate      83.0\n",
+       "1           0        6.2  HeartRate      84.0\n",
+       "2           0        7.2  HeartRate      82.0\n",
+       "3           0        8.2  HeartRate      78.0\n",
+       "4           0        9.2  HeartRate      73.0"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1649,10 +1649,10 @@
     "            \n",
     "            # Store measurements of vital in new DataFrame\n",
     "            vital_df = pd.DataFrame({\n",
-    "                'icustay_id': chunk.admissionid[is_vital],\n",
+    "                'icustay_id': chunk.admissionid[is_vital].values,\n",
     "                'charttime': time_within_admission(chunk.measuredat[is_vital], chunk.admissionid[is_vital]),\n",
     "                'vital_id': vital,\n",
-    "                'valuenum': chunk.value[is_vital],\n",
+    "                'valuenum': chunk.value[is_vital].values,\n",
     "            })\n",
     "            \n",
     "            vitals_df.append(vital_df)\n",
@@ -1716,7 +1716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 44,
    "id": "7d623876-0bae-4075-90a2-f107aa6cc5d3",
    "metadata": {},
    "outputs": [
@@ -1724,7 +1724,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "101it [00:09, 10.89it/s]\n"
+      "101it [00:09, 11.15it/s]\n"
      ]
     },
     {
@@ -1757,38 +1757,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
        "      <td>6.100000</td>\n",
        "      <td>Calcium</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2.28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
        "      <td>12.683333</td>\n",
        "      <td>Calcium</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2.10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
        "      <td>0.416667</td>\n",
        "      <td>Calcium</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2.01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
        "      <td>2.916667</td>\n",
        "      <td>Calcium</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2.08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
        "      <td>0.350000</td>\n",
        "      <td>Calcium</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2.02</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1796,14 +1796,14 @@
       ],
       "text/plain": [
        "   icustay_id  charttime   lab_id  valuenum\n",
-       "0         NaN   6.100000  Calcium       NaN\n",
-       "1         NaN  12.683333  Calcium       NaN\n",
-       "2         NaN   0.416667  Calcium       NaN\n",
-       "3         NaN   2.916667  Calcium       NaN\n",
-       "4         NaN   0.350000  Calcium       NaN"
+       "0           0   6.100000  Calcium      2.28\n",
+       "1           0  12.683333  Calcium      2.10\n",
+       "2           1   0.416667  Calcium      2.01\n",
+       "3           1   2.916667  Calcium      2.08\n",
+       "4           2   0.350000  Calcium      2.02"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1824,10 +1824,10 @@
     "            \n",
     "            # Store lab measurements in new DataFrame\n",
     "            lab_df = pd.DataFrame({\n",
-    "                'icustay_id': chunk.admissionid[is_lab],\n",
+    "                'icustay_id': chunk.admissionid[is_lab].values,\n",
     "                'charttime': time_within_admission(chunk.measuredat[is_lab], chunk.admissionid[is_lab]),\n",
     "                'lab_id': lab,\n",
-    "                'valuenum': chunk.value[is_lab],\n",
+    "                'valuenum': chunk.value[is_lab].values,\n",
     "            })\n",
     "            \n",
     "            labs_df.append(lab_df)\n",
@@ -1835,10 +1835,162 @@
     "    if i > MAX_CHUNKS:\n",
     "        break\n",
     "        \n",
-    "# Merge vital DataFrames\n",
+    "# Merge lab result DataFrames\n",
     "labs_df = pd.concat(labs_df, axis=0).reset_index(drop=True)\n",
     "labs_df.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49697790-5561-4762-8157-19f7e79c66d7",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Urine Output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "167902c8-c042-4fa9-896d-3d17820c522f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "URINE_OUTPUTS = [\n",
+    "    8794,  # UrineCAD\n",
+    "    8796,  # UrineSupraPubis\n",
+    "    8798,  # UrineSpontaan\n",
+    "    8800,  # UrineIncontinentie\n",
+    "    8803,  # UrineUP\n",
+    "    10743, # Nefrodrain li Uit\n",
+    "    10745, # Nefrodrain re Uit\n",
+    "    19921, # UrineSplint Li\n",
+    "    19922  # UrineSplint Re\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "3615d970-cb99-4566-940f-a701955d7f13",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "101it [00:06, 14.91it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>icustay_id</th>\n",
+       "      <th>charttime</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>90.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>310.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>360.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>8.2</td>\n",
+       "      <td>180.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>9.2</td>\n",
+       "      <td>120.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   icustay_id  charttime  value\n",
+       "0           0        5.7   90.0\n",
+       "1           0        6.2  310.0\n",
+       "2           0        7.2  360.0\n",
+       "3           0        8.2  180.0\n",
+       "4           0        9.2  120.0"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "urine_outputs_df = []\n",
+    "\n",
+    "for i, chunk in tqdm(read_csv(r\"D:/AmsterdamUMCdb-v1.0.2/numericitems.csv\", usecols=['admissionid', 'itemid', 'value', 'measuredat'])):\n",
+    "    \n",
+    "    # which entries have urine output\n",
+    "    is_urine_output = chunk.itemid.isin(URINE_OUTPUTS)\n",
+    "\n",
+    "    if is_urine_output.any():\n",
+    "        \n",
+    "        # Store lab measurements in new DataFrame\n",
+    "        urine_output_df = pd.DataFrame({\n",
+    "            'icustay_id': chunk.admissionid[is_urine_output].values,\n",
+    "            'charttime': time_within_admission(chunk.measuredat[is_urine_output], chunk.admissionid[is_urine_output]),\n",
+    "            'value': chunk.value[is_urine_output].values,\n",
+    "        })\n",
+    "\n",
+    "        urine_outputs_df.append(urine_output_df)\n",
+    "        \n",
+    "    if i > MAX_CHUNKS:\n",
+    "        break\n",
+    "        \n",
+    "# Merge urine output DataFrames\n",
+    "urine_outputs_df = pd.concat(urine_outputs_df, axis=0).reset_index(drop=True)\n",
+    "urine_outputs_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5adaad0a-6687-4898-b6a4-a9e2ed19fbcc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
