fio2 estimated (WIP)

--- a/data/amsterdam-umc-db/convert_to_mimic-iii_format.ipynb
+++ b/data/amsterdam-umc-db/convert_to_mimic-iii_format.ipynb
@@ -770,7 +770,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "demo_df"
+    "# save!\n",
+    "demo_df.to_csv(OUT_DIR + 'demographics_cohort.csv')"
    ]
   },
   {
@@ -850,6 +851,161 @@
    "source": [
     "# save!\n",
     "vitals_df.to_csv(OUT_DIR + 'vitals_cohort.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a954b51-a73c-4f0c-8e14-62ffd876451d",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## FiO2 (Fraction of Inspired Oxygen)\n",
+    "\n",
+    "Sources:\n",
+    "\n",
+    "- FiO2: [pO2_FiO2_estimated.sql](https://github.com/AmsterdamUMC/AmsterdamUMCdb/blob/master/amsterdamumcdb/sql/common/pO2_FiO2_estimated.sql)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "20c2baf0-5e53-4b4b-a9f4-352290c0349c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# FiO2 settings on respiratory support\n",
+    "OXYGEN_DEVICES = [\n",
+    "    6699,  # --FiO2 %: setting on Evita ventilator\n",
+    "    12279, # --O2 concentratie --measurement by Servo-i/Servo-U ventilator\n",
+    "    12369, # --SET %O2: used with BiPap Vision ventilator\n",
+    "    16246  # --Zephyros FiO2: Non-invasive ventilation\n",
+    "]\n",
+    "\n",
+    "# Oxygen Flow settings without respiratory support\n",
+    "FIO2_ESTIMATED = [\n",
+    "    8845,  # -- O2 l/min\n",
+    "    10387, # --Zuurstof toediening (bloed)\n",
+    "    18587, # --Zuurstof toediening\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5fb8fc1-9851-4095-af3b-66e908032ed4",
+   "metadata": {},
+   "source": [
+    "To estimate FiO2 , we must first extract ventilator settings for each admission over time from `listitems`;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "05a8b4c2-f827-4365-bc27-0de191f75880",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████████████████████| 23106/23106 [03:47<00:00, 101.78it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "vent_settings = dict()\n",
+    "\n",
+    "for i, chunk in pbar(read_csv(r\"D:/AmsterdamUMCdb-v1.0.2/listitems.csv\", usecols=['admissionid', 'itemid', 'valueid', 'measuredat'])):\n",
+    "    # limit rows to oxygen devices\n",
+    "    chunk = chunk[chunk.itemid == 8189].copy() # -- Toedieningsweg (Oxygen device)\n",
+    "    \n",
+    "    # Add (admissionid, measuredat):valueid pairs to vent_settings\n",
+    "    vent_settings.update(chunk.set_index(['admissionid', 'measuredat'])['valueid'].to_dict())  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "ed222c94-d660-4f19-a093-0c5a0ce50f45",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vent_settings[(7, 33480000)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b101e1d-c8c3-4ae6-8f62-248f4a12bcdf",
+   "metadata": {},
+   "source": [
+    "Knowing the ventilator settings, we can estimate fiO2 when we need to;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "12ca6ea8-e9b5-4b2d-ae83-9f3af61ff7ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 7     42\n",
+      "-1     35\n",
+      " 17    15\n",
+      " 3      7\n",
+      "dtype: int64\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, chunk in tqdm(read_csv(r\"D:/AmsterdamUMCdb-v1.0.2/numericitems.csv\", usecols=['admissionid', 'itemid', 'value', 'measuredat'])):\n",
+    "    # limit to oxygen flow items\n",
+    "    chunk = chunk[chunk.itemid.isin(OXYGEN_DEVICES + FIO2_ESTIMATED)]\n",
+    "    \n",
+    "    # Easy case: use oxygen settings set by ventilator\n",
+    "    fio2_device = chunk.value[chunk.itemid.isin(OXYGEN_DEVICES)].fillna(0.21) # 0.21 -> natural air\n",
+    "    \n",
+    "    # Harder case: estimate fio2\n",
+    "    # 1) query `vent_settings` to get setting's valueid\n",
+    "    valueids = chunk[['admissionid', 'measuredat']].apply(tuple, axis=1).transform(lambda x: vent_settings[x] if x in vent_settings else -1)\n",
+    "    \n",
+    "    option1 = valueids.isin([2, 7])\n",
+    "    \n",
+    "    # TODO: https://github.com/AmsterdamUMC/AmsterdamUMCdb/blob/master/amsterdamumcdb/sql/common/pO2_FiO2_estimated.sql\n",
+    "    \n",
+    "    break\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n"
    ]
   },
   {
